--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 <body>
 <div class="app">
   <header>
-    <h1>初沁科技有限公司</h1>
+    <h1>壺壺茶</h1>
     <button id="memberButton">會員資料</button>
   </header>
 
