--- a/index.html
+++ b/index.html
@@ -312,6 +312,17 @@
       width: 90%;
       max-width: 420px;
     }
+    .modal.cart-modal {
+      max-height: 80vh;
+      display: flex;
+      flex-direction: column;
+    }
+    #cartModalList {
+      flex: 1;
+      overflow-y: auto;
+      padding-right: 4px;
+      min-height: 0;
+    }
     .modal h2 {
       font-size: 18px;
       margin-bottom: 8px;
